fix: 放行/error端点+401未登录响应+billing页超管接口isSuperAdmin守卫
- SecurityConfig: 添加/error到permitAll，避免Spring Boot错误转发产生噪音403日志
- SecurityConfig: 添加AuthenticationEntryPoint，JWT缺失/过期统一返回401 JSON
  前端axios拦截器收到401自动跳转登录页，修复JWT过期不重定向的问题
- CustomerManagement/index.tsx: fetchPendingOrderCount/fetchPendingFeedbackCount
  添加isSuperAdmin守卫，非超管用户不调用admin专属接口，消除403日志
- AppOrderTab.tsx: fetchData添加isSuperAdmin守卫，非超管返回空数据

后端: mvn clean compile BUILD SUCCESS
前端: npx tsc --noEmit exit code 0